--- a/AdminPrograma/src/main/resources/org/example/adminprograma/Estiloak.css
+++ b/AdminPrograma/src/main/resources/org/example/adminprograma/Estiloak.css
@@ -7,3 +7,14 @@
     -fx-background-color: #146886;
     -fx-border-color: WHITE;
 }
+
+.menu-item:hover{
+    -fx-border-color: #660099;
+    -fx-border-width: 0px 0px 3px 0px;
+}
+
+.side-bar:hover{
+    -fx-background-color: #146886;
+    -fx-border-color: WHITE;
+    -fx-border-width: 0px 0px 0px 3px;
+}
