--- a/AdminPrograma/src/main/resources/org/example/adminprograma/menuPantaila.fxml
+++ b/AdminPrograma/src/main/resources/org/example/adminprograma/menuPantaila.fxml
@@ -5,13 +5,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@Estiloak.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Kontroladoreak.menuKontrola">
+<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@Estiloak.css"
+            xmlns="http://javafx.com/javafx/17.0.12"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Kontroladoreak.menuKontrola">
 
     <top>
-        <!-- Tu barra superior igual que antes -->
         <AnchorPane prefHeight="36.0" style="-fx-background-color: #E9C4C7;">
             <children>
-                <!-- Labels a la izquierda -->
                 <Label fx:id="Menu" layoutX="14.0" layoutY="4.0" text="MENUA" textFill="WHITE">
                     <font><Font name="Verdana Bold" size="14.0" /></font>
                     <graphic>
@@ -25,19 +26,20 @@
                 <Label fx:id="MenuBack" layoutX="45.0" layoutY="9.0" text="MENUA" textFill="WHITE">
                     <font><Font name="Verdana Bold" size="14.0" /></font>
                 </Label>
-
-                <!-- Botones alineados a la derecha -->
-                <HBox alignment="CENTER_RIGHT" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <HBox alignment="CENTER_RIGHT" spacing="5.0"
+                      AnchorPane.bottomAnchor="0.0"
+                      AnchorPane.rightAnchor="0.0"
+                      AnchorPane.topAnchor="0.0">
                     <children>
-                        <Button fx:id="btnSaioaBukatu" onAction="#saioaBukatu" style="-fx-background-color: transparent;" text="Saioa itxi" textFill="WHITE">
-                            <font><Font name="Verdana Bold" size="14.0" /></font>
-                        </Button>
-                        <Button fx:id="btnMinimizatu" onAction="#lehioaJaitsi" style="-fx-background-color: transparent;" text="_" textFill="WHITE">
-                            <font><Font name="Verdana Bold" size="18.0" /></font>
-                        </Button>
-                        <Button fx:id="btnItxi" style="-fx-background-color: transparent;" text="X" textFill="WHITE">
-                            <font><Font name="Verdana Bold" size="18.0" /></font>
-                        </Button>
+                        <Button fx:id="btnSaioaBukatu" onAction="#saioaBukatu"
+                                style="-fx-background-color: transparent;"
+                                text="Saioa itxi" textFill="WHITE"/>
+                        <Button fx:id="btnMinimizatu" onAction="#lehioaJaitsi"
+                                style="-fx-background-color: transparent;"
+                                text="_" textFill="WHITE"/>
+                        <Button fx:id="btnItxi"
+                                style="-fx-background-color: transparent;"
+                                text="X" textFill="WHITE"/>
                     </children>
                 </HBox>
             </children>
@@ -47,7 +49,6 @@
     <left>
         <AnchorPane fx:id="slider" BorderPane.alignment="CENTER_LEFT">
             <children>
-                <!-- StackPane centra el VBox dentro del AnchorPane -->
                 <StackPane AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
                            AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <VBox fx:id="menuVBox" styleClass="menuBox"
@@ -68,4 +69,22 @@
             </children>
         </AnchorPane>
     </left>
+
+    <center>
+        <VBox spacing="10" alignment="TOP_CENTER">
+            <HBox alignment="CENTER_RIGHT" spacing="10">
+                <Button fx:id="btnInsertLangilea" text="Insert Langilea" styleClass="menuButton"/>
+            </HBox>
+            <TableView fx:id="langileakTable" prefWidth="580.0" prefHeight="300.0">
+                <columns>
+                    <TableColumn fx:id="colIzena" text="Izena" prefWidth="100.0"/>
+                    <TableColumn fx:id="colAbizena" text="Abizena" prefWidth="100.0"/>
+                    <TableColumn fx:id="colEmaila" text="Emaila" prefWidth="150.0"/>
+                    <TableColumn fx:id="colTelefonoa" text="Telefonoa" prefWidth="100.0"/>
+                    <TableColumn fx:id="colBaimena" text="Baimena" prefWidth="80.0"/>
+                    <TableColumn fx:id="colAkzioak" text="Akzioak" prefWidth="120.0"/>
+                </columns>
+            </TableView>
+        </VBox>
+    </center>
 </BorderPane>
