Barra deslizatzailea kenduta, arazoengatik

--- a/AdminPrograma/src/main/resources/org/example/adminprograma/Estiloak.css
+++ b/AdminPrograma/src/main/resources/org/example/adminprograma/Estiloak.css
@@ -92,6 +92,8 @@
     -fx-font-weight: bold;
     -fx-text-fill: white;
     -fx-alignment: CENTER;
+    -fx-font-family: "Verdana Bold";
+
 }
 
 /* Fondo del encabezado */
