Baimena ematea eta kentzea funtzionatzen du

--- a/AdminPrograma/src/main/resources/org/example/adminprograma/Pantailak/Langileak.fxml
+++ b/AdminPrograma/src/main/resources/org/example/adminprograma/Pantailak/Langileak.fxml
@@ -18,6 +18,9 @@
                 <columns>
                     <TableColumn fx:id="colIzena" text="Izena" />
                     <TableColumn fx:id="colAbizena" text="Abizena" />
+                    <TableColumn fx:id="colErabiltzailea" text="Erabiltzailea" />
+                    <TableColumn fx:id="colPasahitza" text="Pasahitza" />
+                    <TableColumn fx:id="colLangileMotaId" text="Langile Mota" />
                     <TableColumn fx:id="colEmaila" text="Emaila" />
                     <TableColumn fx:id="colTelefonoa" text="Telefonoa" />
                     <TableColumn fx:id="colBaimena" text="Baimena" />
